# safetycite

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: about.html
notebooks/: colab_app.ipynb
safetycite/: __init__.py  cli.py  config.py
safetycite/backends/: __init__.py  base.py  local_backend.py  local_train.py  mint_backend.py
safetycite/corpus/: __init__.py  fetch_ecfr.py  index.py
safetycite/data/: __init__.py  build_dataset.py  render.py  schema.py
safetycite/data/seed/: construction.jsonl  general_industry.jsonl  recordkeeping.jsonl
safetycite/eval/: __init__.py  evaluate.py
safetycite/rewards/: __init__.py  citation.py  composite.py  format.py
safetycite/serve/: __init__.py  app.py  router.py
tests/: test_corpus.py  test_data_router.py  test_rewards.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AdaptersTab.tsx  AnswerCard.tsx  AskTab.tsx  EvalTab.tsx
web/src/lib/: api.ts
