[project]
name = "safetycite"
version = "0.1.0"
description = "SafetyCite — an OSHA Compliance Copilot trained with MinT (Tinker-compatible LoRA SFT/RL). Verifiable-citation rewards, per-domain adapters, fully live."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Olsi Sadiku" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Live local / Colab engine (real Qwen3 via Hugging Face). Lazy-imported.
local = [
    "torch>=2.3",
    "transformers>=4.44",
    "peft>=0.12",
    "trl>=0.10",
    "accelerate>=0.33",
    "datasets>=2.20",
    "safetensors>=0.4",
]
# Remote MinT engine (Tinker-compatible). Pinned: sk-mint-* keys require 0.6.3.
mint = [
    "tinker==0.6.3",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
safetycite = "safetycite.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["safetycite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
